@@ -24,8 +24,7 @@ package de.bund.bsi.tresor.aip.validator.signature;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URISyntaxException;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.AbstractMap;
@@ -185,9 +184,13 @@ public class CredentialSectionAnalyzer
     {
         try
         {
-            return Files.readAllBytes( Paths.get( new URL( url ).toURI() ) );
+            return Files.readAllBytes( Paths.get( URI.create( url ) ) );
         }
-        catch ( IOException | URISyntaxException e )
+        catch( IllegalArgumentException e )
+        {
+            return AIPUtil.loadFileFromRelativeURI( e, url );
+        }
+        catch ( IOException e )
         {
             // could not read lxaip data
             ModuleLogger.verbose( "could not retrieve lxaip data from dataObject", e );
